--- a/image/tensorflow-ffmpeg/Dockerfile
+++ b/image/tensorflow-ffmpeg/Dockerfile
@@ -1,8 +1,8 @@
 FROM gcr.io/tensorflow/tensorflow
 
-RUN apt-get install python-software-properties && \
+RUN apt-get update  && \ 
 	apt-get install software-properties-common && \
 	add-apt-repository ppa:mc3man/trusty-media && \
-	apt-get update && apt-get dist-upgrade && \ 
+	apt-get update  && sudo apt-get dist-upgrade && \ 
 	apt-get install -y ffmpeg
 
