--- a/image/tensorflow-ffmpeg/Dockerfile
+++ b/image/tensorflow-ffmpeg/Dockerfile
@@ -2,7 +2,7 @@ FROM gcr.io/tensorflow/tensorflow
 
 RUN apt-get update  && \ 
 	apt-get install -y software-properties-common && \
-	add-apt-repository ppa:mc3man/trusty-media && \
-	apt-get update && apt-get dist-upgrade && \
+	add-apt-repository -y ppa:mc3man/trusty-media && \
+	apt-get update && apt-get -y dist-upgrade && \
 	apt-get install -y ffmpeg
 
