--- a/image/cross-compiler/Dockerfile
+++ b/image/cross-compiler/Dockerfile
@@ -2,7 +2,7 @@ FROM sdthirlwall/raspberry-pi-cross-compiler
 
 # Install some native build-time tools
 # For Protobuf
-RUN apt-get update && apt-get install -y autoconf automake libtool openjdk-8-jdk maven unzip
+RUN apt-get update && apt-get install -y autoconf automake libtool maven unzip
 # For Bazel
 RUN echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee /etc/apt/sources.list.d/webupd8team-java.list && \
     echo "deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" | tee -a /etc/apt/sources.list.d/webupd8team-java.list && \
